Tue May 18 14:25:25 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Property_Handler.h:
        * DnC/Config_Handlers/Property_Handler.cpp:

          Added a xercesc::DOMNode * as a formal argument. Though this
          argument is unnecessary in the process_property () function,
          this was necessary to have a common signature for all the
          process_* functions, so that they could be templatized.

Tue May 18 12:01:14 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/CAD_Handler.cpp:
        * DnC/Config_Handlers/CAD_Handler.h:

          Updated to handle HREF and IDREF tags.

Tue May 18 06:30:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DnC/NodeApplicationManager/NodeApplicationManager.mpc:
          Fixed typos in this MPC file

Tue May 18 00:54:00 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/CAD_Handler.cpp:
        * DnC/Config_Handlers/CAD_Handler.h:
        * DnC/Config_Handlers/Config_Handlers.mpc:
        * DnC/Config_Handlers/DnC_Dump.cpp:
        * DnC/Deployment.idl:

          Made a change to the IDL for the ComponentDataModel
          elements.

          Updated the affected handlers.

Mon May 17 22:15:11 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* docs/index.html:
	* docs/EnvVars.html:

	  Left over files from RTCIAO-tests branch merge. Thanks to
	  Nanbor for pointing this out.

Mon May 17 21:07:25 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tools/static_configurator/Static_Assembly_Visitors.h:
	* tools/static_configurator/Static_Configurator.cpp:
	* tools/static_configurator/Static_Configurator.mpc:

	  Fixed some compile errors because of a typo.

Mon May 17 19:29:43 2004  Venkita Subramonian  <venkita@cs.wustl.edu>

	* tools/RTComponentServer/RTServer_Impl.cpp:
	* tools/RTComponentServer/RTServer_Impl.h:
	* tools/RTComponentServer/RTServer_Impl.inl: Added extra